# grid

./: Dockerfile  README.md  next.config.js  package-lock.json  package.json
api/: pyproject.toml
api/src/: main.py  test_main.py
api/src/lighting/: __init__.py  find_port.py  lighting.py
app/: about.tsx  layout.tsx  lighting.tsx  page.tsx  sensor.tsx
app/about/: page.tsx
app/lighting/: broadcastDimming.tsx  controlModes.tsx  listTransmitter.tsx  page.tsx  separator.tsx
app/sensor/: page.tsx  sensor.tsx
components/: about.tsx  lighting.tsx  navbar.tsx  sensor.tsx
components/lighting/: controlModes.tsx  listTransmitter.tsx
